force-app/main/default/objects/Question__c/Question__c.object-meta.xml
<CustomObject>
    <description>This table stores the questions for each quiz, including the text of the question, the ID of the quiz it belongs to, the ID of the question type, and optional fields for time limit and randomization.</description>
    <label>Question</label>
    <nameField>
        <displayFormat>Q-{000000}</displayFormat>
        <label>Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>