force-app/main/default/objects/Question__c/fields/QuestionText__c.field-meta.xml
<CustomField>
    <fullName>QuestionText__c</fullName>
    <label>QuestionText</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>