force-app/main/default/objects/Question__c/fields/QuestionType__c.field-meta.xml
<CustomField>
    <fullName>QuestionType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>QuestionType</label>
    <referenceTo>QuestionType__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>