force-app/main/default/objects/Question__c/fields/Quize__c.field-meta.xml
<CustomField>
    <fullName>Quize__c</fullName>
    <label>Quize</label>
    <referenceTo>Quize__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>