force-app/main/default/objects/Question__c/fields/RandomizeOrder__c.field-meta.xml
<CustomField>
    <fullName>RandomizeOrder__c</fullName>
    <label>RandomizeOrder</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>