force-app/main/default/objects/Question__c/fields/TimeLimit__c.field-meta.xml
<CustomField>
    <fullName>TimeLimit__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Time limit in seconds.</description>
    <label>TimeLimit</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>